# Vantage

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  git-config-docker.template
.github/workflows/: ci.yml
backend/: Cargo.toml  test-worker.js  test.html
backend/src/: lib.rs  logger.rs  output.rs  square.rs  status.rs  utils.rs  wasm.rs
backend/src/board/: castle_bits.rs  fen.rs  fen_tables.rs  mod.rs  tests.rs
backend/src/book/: mod.rs  polyglot_book.rs  polyglot_entry.rs  polyglot_hash.rs  polyglot_keys.rs
backend/src/hash/: zobrist.rs
backend/src/moves/: execute.rs  mod.rs  movegen.rs  perft.rs  square_control.rs  types.rs
backend/src/moves/magic/: attacks.rs  loader.rs  masks.rs  precompute.rs  search.rs  structs.rs
backend/src/search/: context.rs  eval.rs  mod.rs  ordering.rs  pesto.rs  picker.rs  search.rs  see.rs  tt.rs
backend/tests/: aspiration_tests.rs  draw_invariants_tests.rs  eval_materials_tests.rs  iterative_deepening_tests.rs  legal_filter_tests.rs  lmr_tests.rs  magic_consistency.rs  magic_tests.rs  moveexec_tests.rs  movegen_tests.rs  nmp_tests.rs  ordering_tests.rs  pawn_movegen_tests.rs  perft_tests.rs  quiescence_diagnostics_tests.rs  search_tests.rs  see_tests.rs  square_control_tests.rs  status_tests.rs  tactical_tests.rs  tt_move_ordering_tests.rs  tt_tests.rs  zobrist_hash_tests.rs
data/engines/: fruit  tscp
data/results/2026-02-05_02-20-03/: summary.txt
data/results/2026-02-05_15-03-36/: summary.txt
data/results/2026-02-06_14-51-09/: summary.txt
data/results/2026-02-06_17-56-16/: summary.txt
data/results/2026-02-06_19-40-35/: summary.txt
docker/: Dockerfile.dev  Dockerfile.engine  Dockerfile.web  nginx.conf
frontend/: next.config.ts  package-lock.json  package.json
scripts/: check_engines.py  run_gauntlet.py
(+9 files in other folders)
