[package]
name = "vantage"
version = "1.4.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
arrayvec = "0.7"
tracing = { version = "0.1", features = ["attributes"] }
once_cell = "1.21.3"

# CLI-only deps (not needed for WASM)
indicatif = { version = "0.18.0", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
tracing-appender = { version = "0.2", optional = true }

[lib]
name = "vantage"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "vantage"
path = "src/bin/cli.rs"

[features]
default = ["psqt", "cli"]
cli = ["dep:indicatif", "dep:tracing-subscriber", "dep:tracing-appender"]
load_magic = []
deterministic_magic = []
deterministic_zobrist = [] 
psqt = []
paranoid_hash = []
lmr_stats=[]
aspiration_stats=[]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
web-time = "1.1"